--- a/product.html
+++ b/product.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>This is Product Page</h1>
+    <ul>
+        <li>Product 1</li>
+        <li>Product 2</li>
+        <li>Product 3</li>
+        <li>Product 4</li>
+    </ul>
 </body>
 </html>
