update the about description

--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is About Us Page</h1>
     <h2>added sub heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, assumenda totam quos a natus id vero repudiandae libero quia maiores.</p>
 </body>
 </html>
